[package]
name = "weevil"
version = "0.1.0"
edition = "2024"

  [[bin]]
  name = "client"
  path = "src/client.rs"

    [[bin]]
  name = "server"
  path = "src/server.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
mio = {version = "1.2.0", features=["net", "os-poll"]}
rand = "0.10.1"
thiserror = "2.0.18"
